feat: patch oclif

--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "oclif",
+  "name": "@fluencelabs/oclif",
   "description": "oclif: create your own CLI",
   "version": "4.1.0",
   "author": "Salesforce",
-  "bin": {
-    "oclif": "bin/run.js"
-  },
+  "bin": "bin/run.js",
   "bugs": "https://github.com/oclif/oclif/issues",
   "dependencies": {
     "@oclif/core": "^3.0.4",
@@ -140,5 +138,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "packageManager": "yarn@3.7.0+sha512.c0bef4cb2a32230b4baa5cab387b4051b47f6242ca8e2b3f9dbf3b7a3d0c729efb4bff872f753b977b2788e4a9a4af30bfc663885de15af1fde122ed0a268810"
 }
